--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <li><a href="#">Sign up</a></li>
                     <li><a href="#">Log in</a></li>
                     <li><a href="#"><i class="bi bi-search"></i></a></li>
-                    <li><a href="#"><i class="bi bi-cart3"></i></a></li>
+                    <li><a href="#"><i class="bi bi-cart3 cartAfter"></i></a></li>
                 </ul>
             <div class="cart">
-                <li><a href="#"><i class="bi bi-cart3"></i></a></li>
+                <li><a href="#"><i class="bi bi-cart3 cartAfter"></i></a></li>
             </div>
         </nav>
     </header>
