--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@
             </div>
         </nav>
     </header>
-    <main></main>
+    <main class="container">
+        <section class="hero ">
+            <div class="heroLeft">
+                <h1>Start your Journey as <br> Influencer</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button>Prebook now <i class="bi bi-arrow-right"></i></button>
+            </div>
+            <div class="heroRight">
+                <img src="./images/main-camera.png" alt="main-camera">
+            </div>
+        </section>
+    </main>
     <footer></footer>
 
 
