--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
                 <img src="./images/main-camera.png" alt="main-camera">
             </div>
         </section>
+        <section class="brands">
+            <img src="./logos/Alibaba.svg" alt="alibaba">
+            <img src="./logos/Amazon.svg" alt="amazon">
+            <img src="./logos/Daraz.pk Logo.svg" alt="amazon">
+            <img src="./logos/Rakuten.svg" alt="amazon">
+            <img src="./logos/Walmart.svg" alt="amazon">
+            <img src="./logos/Target.svg" alt="amazon">
+        </section>
     </main>
     <footer></footer>
 
