half card section done

--- a/index.html
+++ b/index.html
@@ -49,6 +49,138 @@
             <img src="./logos/Walmart.svg" alt="amazon">
             <img src="./logos/Target.svg" alt="amazon">
         </section>
+        <section class="cardSections">
+            <h3>Popular Collection</h3>
+            <div class="collections">
+            <div class="card">
+                <img src="./images/tripod.png" alt="">
+                <h4>Flex Tripod</h4>
+                <span>$50.48</span>
+                <div class="rating">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>
+                    <span>4.99</span>
+                </div>
+                <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/tripod.png" alt="">
+                <h4>Flex Tripod</h4>
+                <span>$50.48</span>
+                <div class="rating">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>
+                    <span>4.99</span>
+                </div>
+                <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/tripod.png" alt="">
+                <h4>Flex Tripod</h4>
+                <span>$50.48</span>
+                <div class="rating">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>
+                    <span>4.99</span>
+                </div>
+                <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/tripod.png" alt="">
+                <h4>Flex Tripod</h4>
+                <span>$50.48</span>
+                <div class="rating">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>
+                    <span>4.99</span>
+                </div>
+                <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/tripod.png" alt="">
+                <h4>Flex Tripod</h4>
+                <span>$50.48</span>
+                <div class="rating">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>
+                    <span>4.99</span>
+                </div>
+                <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/tripod.png" alt="">
+                <h4>Flex Tripod</h4>
+                <span>$50.48</span>
+                <div class="rating">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>
+                    <span>4.99</span>
+                </div>
+                <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/tripod.png" alt="">
+                <h4>Flex Tripod</h4>
+                <span>$50.48</span>
+                <div class="rating">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>
+                    <span>4.99</span>
+                </div>
+                <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/tripod.png" alt="">
+                <h4>Flex Tripod</h4>
+                <span>$50.48</span>
+                <div class="rating">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>
+                    <span>4.99</span>
+                </div>
+                <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/tripod.png" alt="">
+                <h4>Flex Tripod</h4>
+                <span>$50.48</span>
+                <div class="rating">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>
+                    <span>4.99</span>
+                </div>
+                <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
+            </div>
+        </div>
+        </section>
+
     </main>
     <footer></footer>
 
