--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
             </div>
             <div class="card">
-                <img src="./images/tripod.png" alt="">
-                <h4>Flex Tripod</h4>
-                <span>$50.48</span>
+                <img src="./images/mic.png" alt="">
+                <h4>microphone</h4>
+                <span>$120.25</span>
                 <div class="rating">
                     <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star-fill"></i>
@@ -81,9 +81,9 @@
                 <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
             </div>
             <div class="card">
-                <img src="./images/tripod.png" alt="">
-                <h4>Flex Tripod</h4>
-                <span>$50.48</span>
+                <img src="./images/airpod.png" alt="">
+                <h4>Airbuds</h4>
+                <span>$100.00</span>
                 <div class="rating">
                     <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star-fill"></i>
@@ -95,9 +95,9 @@
                 <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
             </div>
             <div class="card">
-                <img src="./images/tripod.png" alt="">
-                <h4>Flex Tripod</h4>
-                <span>$50.48</span>
+                <img src="./images/drone.png" alt="">
+                <h4>Drone</h4>
+                <span>$980.25</span>
                 <div class="rating">
                     <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star-fill"></i>
@@ -109,9 +109,9 @@
                 <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
             </div>
             <div class="card">
-                <img src="./images/tripod.png" alt="">
-                <h4>Flex Tripod</h4>
-                <span>$50.48</span>
+                <img src="./images/lights.png" alt="">
+                <h4>Light Setup</h4>
+                <span>$1200.00</span>
                 <div class="rating">
                     <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star-fill"></i>
@@ -123,9 +123,9 @@
                 <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
             </div>
             <div class="card">
-                <img src="./images/tripod.png" alt="">
-                <h4>Flex Tripod</h4>
-                <span>$50.48</span>
+                <img src="./images/setup.png" alt="">
+                <h4>Photoshoot set</h4>
+                <span>$820.40</span>
                 <div class="rating">
                     <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star-fill"></i>
@@ -137,9 +137,9 @@
                 <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
             </div>
             <div class="card">
-                <img src="./images/tripod.png" alt="">
-                <h4>Flex Tripod</h4>
-                <span>$50.48</span>
+                <img src="./images/camera.png" alt="">
+                <h4>Vlogging Camera</h4>
+                <span>$1800.80</span>
                 <div class="rating">
                     <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star-fill"></i>
@@ -151,9 +151,9 @@
                 <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
             </div>
             <div class="card">
-                <img src="./images/tripod.png" alt="">
-                <h4>Flex Tripod</h4>
-                <span>$50.48</span>
+                <img src="./images/single-light.png" alt="">
+                <h4>Green Screen</h4>
+                <span>$25.48</span>
                 <div class="rating">
                     <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star-fill"></i>
@@ -165,9 +165,9 @@
                 <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
             </div>
             <div class="card">
-                <img src="./images/tripod.png" alt="">
-                <h4>Flex Tripod</h4>
-                <span>$50.48</span>
+                <img src="./images/action.png" alt="">
+                <h4>Action Camera</h4>
+                <span>$280.00</span>
                 <div class="rating">
                     <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star-fill"></i>
