--- a/index.html
+++ b/index.html
@@ -179,10 +179,34 @@
                 <p>WordWide shifting <br> available <br> Buyers protection possible!</p>
             </div>
         </div>
+        <div class="alignBtn">
+            <button>See More <i class="bi bi-arrow-right"></i></button>
+        </div>
         </section>
-
+        <section class="featured">
+            <div class="featuredLeft">
+                <img src="./images/gear.png" alt="">
+            </div>
+            <div class="featuredRight">
+                <h3>Featured products at one place</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor <br> do amet sint. Velit officia consequat duis enim velit mollit. <br> Exercitation veniam consequat sunt nostrud amet.</p>
+                <button>Join Now <i class="bi bi-arrow-right"></i></button>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer container">
+            <h3>Influencer products</h3>
+            <span>Copyright © 2020  influencer products</span>
+            <p>All rights reserved</p>
+            <div class="footerIcons">
+                <i class="bi bi-instagram"></i>
+                <i class="bi bi-dribbble"></i>
+                <i class="bi bi-twitter"></i>
+                <i class="bi bi-youtube"></i>
+            </div>
+        </div>
+    </footer>
 
 
 
