adding some animation

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <button>Prebook now <i class="bi bi-arrow-right"></i></button>
             </div>
             <div class="heroRight">
-                <img src="./images/main-camera.png" alt="main-camera">
+                <img src="./images/main-camera.png" class="heroImg" alt="main-camera">
             </div>
         </section>
         <section class="brands">
@@ -180,7 +180,7 @@
             </div>
         </div>
         <div class="alignBtn">
-            <button>See More <i class="bi bi-arrow-right"></i></button>
+            <button class="btn">See More <i class="bi bi-arrow-right arrow"></i></button>
         </div>
         </section>
         <section class="featured">
